noinst_LTLIBRARIES = libMU.la

libMU_la_SOURCES = 

libMU_la_LIBADD = ClientPM/libClientPM.la  \
				 CSPM/libCSPM.la  \
				 dao/libdao.la  \
				 frame/libframe.la  \
				 storage/libstorage.la  \
				 init/libinit.la  \
				 item/libitem.la  \
				 MigrationPM/libMigrationPM.la  \
				 oplog/liboplog.la  \
				 protocol/libprotocol.la  \
				 state/libstate.la  \
				 zip/libmuzip.la

SUBDIRS = ClientPM CSPM dao frame storage init item MigrationPM  \
		  oplog protocol state zip
