#lib_LTLIBRARIES = libsys.la
noinst_LTLIBRARIES = libsys.la

libsys_la_SOURCES = Cond.cpp  \
				   Exception.cpp  \
				   Mutex.cpp  \
				   RWLock.cpp  \
				   Thread.cpp  \
				   ThreadPool.cpp  \
				   Time.cpp  \
				   ThreadPool3.cpp 


INCLUDES = $(GLOBAL_INCLUDES) -I$(top_srcdir)/common

