#lib_LTLIBRARIES = libCSPM.la
noinst_LTLIBRARIES = libCSPM.la

libCSPM_la_SOURCES = CSHeartbeatTask.cpp  \
					CSTask.cpp  \
					ExtentTask.cpp  \
					MigrationClientTask.cpp  \
					StartBucketTask.cpp  \
					StopBucketTask.cpp  

INCLUDES = $(GLOBAL_INCLUDES)  \
		   -I$(top_srcdir)/common  \
		   -I$(top_srcdir)/src

