#lib_LTLIBRARIES = libframe.la
noinst_LTLIBRARIES = libframe.la

libframe_la_SOURCES = MUConfiguration.cpp  \
					 MUEpoll.cpp \
					 MUAgentManager.cpp \
					 MUDAO.cpp  \
					 MURegister.cpp  \
					 MUTask.cpp  \
					 MUTaskManager.cpp  \
					 MUTCPAgent.cpp  \
					 MUTimer.cpp  \
					 MUTPDispatcher.cpp  \
					 MUTPRequest.cpp  \
					 MUWorkItem.cpp  \
					 MUWorkItemManager.cpp  \
					 PassiveTask.cpp  \
					 RecycleTask.cpp  \
					 ReturnStatus.cpp  \
					 RunControl.cpp  \
					 ThreadPoolDispatcher.cpp

INCLUDES = $(GLOBAL_INCLUDES)  \
		   -I$(top_srcdir)/common  \
		   -I$(top_srcdir)/src
