#lib_LTLIBRARIES = libitem.la
noinst_LTLIBRARIES = libitem.la

libitem_la_SOURCES = BucketItem.cpp  \
					ExtentItem.cpp  \
					FileOpItem.cpp  \
					InitItem.cpp  \
					LogItem.cpp  \
					LogRotationCheckItem.cpp  \
					MigrationClientItem.cpp  \
					MigrationServerItem.cpp  \
					UserItem.cpp  \
					CheckIdleUserItem.cpp

INCLUDES = $(GLOBAL_INCLUDES)  \
		   -I$(top_srcdir)/common  \
		   -I$(top_srcdir)/src  \
		   -I$(top_srcdir)/lib

